2003-01-22  Ben Hines <benh57@users.sourceforge.net>

	* Engine.pm, Package.pm: Match "fink list" & "install/remove/etc"
	  items case-insensitively (Patch #622663)
	  
2003-01-22  Max Horn  <max@quendi.de>

	* Various files: Applied Chris Zubrzycki's build directory patch which allows
	  the use of an alternate build dir (Patch #658682).

2003-01-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm:  Allow a new license "Restrictive/Distributable"
	  to indicate that distribution of binaries is allowed even though
	  the license is restrictive.
	
2003-01-15  Max Horn  <max@quendi.de>

	* Validation.pm: Putting stuff inside /sw/src is illegal for a .deb,
	  but just containing /sw/src is fine (as long as it is empty).

2003-01-14  Max Horn  <max@quendi.de>

	* Engine.pm, Services.pm: Fixing problems with exit codes (Patch #662894).

	* Engine.pm: 'fink apropos' command now also matches the package name,
	  not just the package description (Patch #661169).

	* Services.pm: Added terminal width fix from patch #598402.

2003-01-13  Finlay Dobbie <finlay@users.sourceforge.net>

	* PkgVersion.pm (merge): Added warning to if we try to merge a 
	non-dummy package.
	
2003-01-12  Dave Morrison <dmrrsn@users.sourceforge.net>

	* all files: updated copyright notice to include 2003

2003-01-12  Finlay Dobbie <finlayd@users.sourceforge.net>

	* PkgVersion.pm: Fix splitoff dependency problem (Bug #641466).
	Also removed the really old "pkg <blah> version ###" text, finally.
	
	* Package.pm: Moved to custom find code for scan_packages. Hopefully
	safer, possibly slightly faster, but I doubt it.
	
2003-01-07  Max Horn  <max@quendi.de>

	* Validation.pm: Warn if MD5 field(s) is/are missing.

2003-01-05  Justin F. Hallett <thesin@users.sourceforge.net>

	* Engine.pm:  Added sub phase_purge

	* PkgVersion.pm:  Added sub cmd_purge and change fink purge to
	acctually do a dpkg purge

2003-01-02  Benjamin Reed <rangerrick@users.sourceforge.net>
